# magpai

./: .env.sample  .gitignore  Dockerfile  README.md  compose.dev.yml  compose.prod.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  rollup.config.js
core/: admin.py  urls.py
core/migrations/: 0001_initial.py  0002_judge_game_intro_game_outro_game_prize_and_more.py  0003_questionresponse_response.py  0004_game_current_judge.py
core/models/: __init__.py
core/models/game/: models.py
core/models/question/: models.py
core/static/core/: base.css  style.css
core/static/core/game/: page.ts
core/static/core/home/: page.ts
core/templates/core/: base.html  complete.html  game.html  select.html  start.html
core/templates/registration/: login.html
core/tests/: test_placeholder.py
core/views/: __init__.py  game.py  home.py
core/views/game/: __init__.py  complete.py  game.py  judge_submission.py  run.py  select.py  start.py
core/views/game/tests/: setup.py  test_complete_game_view.py  test_select_game_view.py  test_start_game_view.py
magpai/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: Dockerfile  app.conf
setup/: certbot-init.sh
