[tool.poetry]
name = "magpai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
pytest = "^8.0.1"
openai = "^1.23.2"
psycopg2 = "^2.9.9"
gunicorn = "^22.0.0"
pillow = "^10.3.0"
pytest-django = "^4.8.0"
pytest-env = "^1.1.3"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "test_*.py"
DJANGO_SETTINGS_MODULE = "magpai.settings"

[tool.pytest_env]
DJANGO_SECRET_KEY = 'insecure-testing-only-key'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
