[tool.poetry]
name = "magpai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
pytest = "^8.0.1"
openai = "^1.23.2"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "test_*.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
